--- a/App.html
+++ b/App.html
@@ -58,9 +58,12 @@
     </nav>
     <main class="content">
         <div class="container mt-5">
-            <h1>APP UI GOES HERE</h1>
+            <h1>Taco Cat: Palindrome Check</h1>
             <input type="text" id="message" placeholder="Enter a Message"/>
             <button id="btnSubmit" class="btn btn-primary"> Display message</button>
+            <div id="results">
+
+            </div>
         </div>
     </main>
 
@@ -98,7 +101,7 @@
 
     <script src="/js/site.js"></script>
     <script>
-        document.getElementById("btnSubmit").addEventListener("click",getValue2);
+        document.getElementById("btnSubmit").addEventListener("click",getValue);
     </script>
     
 
