--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         <div class="container my-5">
            <div class="row">
             <div class="col-12 col-lg-6 order-last order-lg-first">
-                <h1>App Name: A Coding Challenge</h1>
-                <h4 class="lead">Your project description goes here.</h4>
+                <h1>Kayak Palindrome Check: A Coding Challenge</h1>
+                <h4 class="lead">Is it a palindrome?</h4>
                 <ul class="checklist">
                     <li><i class="bi bi-check-square-fill"></i> CCC and Bootstrap Layout</li>
                     <li><i class="bi bi-check-square-fill"></i> Javascript Fundimentals</li>
@@ -74,7 +74,7 @@
                     <li><i class="bi bi-check-square-fill"></i> Javascript boolean logic</li>
                 </ul>
                 <div>
-                    <a type="button" class="btn btn-primary" href="/App.html">Try It</a>
+                    <a type="button" class="btn btn-primary" href="/App.html">Find Out Here!</a>
                 </div>
                     <h5 class="fw-bold mt-4">Technologies Used</h5>
                 <div class="d-flex">
@@ -88,7 +88,7 @@
             </div>
 
             <div class="col-12 col-lg-6">
-                <img src="/img/APPNAMELogo.svg" class="img-fluid">
+                <img src="/img/Outdoor Adventure Logo Badge Design.png" class="img-fluid">
             </div>
 
            </div>
