--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                            <a class="nav-link" href="Code.html">The Code</a>
                        </li>
                        <li class="nav-item">
-                           <a class="nav-link" href="#">The Repo</a>
+                           <a class="nav-link" href="https://github.com/M-ybeme/TacoCat">The Repo</a>
                        </li>
                        <li class="nav-item">
-                           <a class="nav-link" href="#">About</a>
+                           <a class="nav-link" href="https://marlomayberrydevportfolio.netlify.app">About</a>
                        </li>
                     </ul>
                </div>
