stuff and links

--- a/App.html
+++ b/App.html
@@ -47,10 +47,10 @@
                         <a class="nav-link" href="Code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">The Repo</a>
+                        <a class="nav-link" href="https://github.com/M-ybeme/TacoCat">The Repo</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="https://marlomayberrydevportfolio.netlify.app">About</a>
                     </li>
                  </ul>
             </div>
@@ -58,9 +58,16 @@
     </nav>
     <main class="content">
         <div class="container mt-5">
-            <h1>Taco Cat: Palindrome Check</h1>
+            <h1>Kayak: Palindrome Check</h1>
+            <p>The Taco Cat coding challenge is based on the more traditional
+                 “Reverse a string” exercise but ultimately determines if a
+                  word or phrase is a palindrome. The Reverse a string exercise
+                   in some form has been used by technology companies such as
+                    Amazon, Microsoft, VMware and Norton to assess a candidate’s
+                     ability to code an impromptu algorithm.</p>
             <input type="text" id="message" placeholder="Enter a Message"/>
             <button id="btnSubmit" class="btn btn-primary"> Display message</button>
+            <br>
             <div id="results">
 
             </div>
