--- a/App.html
+++ b/App.html
@@ -59,7 +59,7 @@
     <main class="content">
         <div class="container mt-5">
             <h1>Kayak: Palindrome Check</h1>
-            <p>The Taco Cat coding challenge is based on the more traditional
+            <p>The Palimdrone check coding challenge is based on the more traditional
                  “Reverse a string” exercise but ultimately determines if a
                   word or phrase is a palindrome. The Reverse a string exercise
                    in some form has been used by technology companies such as
